--- a/fwd-project/src/app/cart/cart.component.html
+++ b/fwd-project/src/app/cart/cart.component.html
@@ -1,15 +1,16 @@
 <app-form></app-form>
 <div *ngFor="let p of products; let i = index" [attr.data-index]="i">
   <div *ngIf="amounts[i] > 0">
-    <app-product-item
+    <app-cart-product-item
       [id]="p.id"
       [name]="p.name"
       [price]="p.price"
       [image]="p.url"
-    ></app-product-item>
+      (current_amount)="currentAmout(p.id, $event)"
+    ></app-cart-product-item>
   </div>
 </div>
 
 <div id="total">
-  <input [(ngModel)]="total" type="text" name="" id="" />
+  <p name="" id="">{{ total | currency: "EGP" }}</p>
 </div>
