--- a/fwd-project/src/app/product-details/product-details.component.html
+++ b/fwd-project/src/app/product-details/product-details.component.html
@@ -1,3 +1,6 @@
-<img [src]="product.url" alt="" />
-<h3>{{ product.name }}</h3>
-<p>{{ product.description }}</p>
+<app-product-item
+  [id]="id"
+  [name]="name"
+  [price]="price"
+  [image]="url"
+></app-product-item>
