--- a/fwd-project/src/app/product-details/product-details.component.html
+++ b/fwd-project/src/app/product-details/product-details.component.html
@@ -1,3 +1,13 @@
+<!-- <div id="product-container">
+  <div id="img-container">
+    <img [src]="url" alt="" />
+  </div>
+  <div id="details-container">
+    <p>{{ name }}</p>
+    <p>{{ price | currency: "EGP" }}</p>
+  </div>
+</div> -->
+
 <app-product-item
   [id]="id"
   [name]="name"
