Updated the max length of name

--- a/fwd-project/src/app/form/form.component.html
+++ b/fwd-project/src/app/form/form.component.html
@@ -5,7 +5,14 @@
   (ngSubmit)="onSubmit()"
 >
   <label for="name">Name: </label>
-  <input required minlength="4" id="name" type="text" formControlName="name" />
+  <input
+    required
+    minlength="4"
+    mamxLength="25"
+    id="name"
+    type="text"
+    formControlName="name"
+  />
   <br /><br />
   <label for="address">Address: </label>
   <input
