Added description to the product details

--- a/fwd-project/src/app/cart-product-item/cart-product-item.component.html
+++ b/fwd-project/src/app/cart-product-item/cart-product-item.component.html
@@ -20,7 +20,7 @@
     class="product-quantity"
     type="number"
     [placeholder]="amounts[id - 1]"
-    (change)="changeAmount(item.value)"
+    (ngModelChange)="changeAmount(item.value)"
     max="30"
     min="0"
     #item
