--- a/fwd-project/src/app/product-item-list/product-item-list.component.html
+++ b/fwd-project/src/app/product-item-list/product-item-list.component.html
@@ -5,6 +5,7 @@
       [name]="p.name"
       [price]="p.price"
       [image]="p.url"
+      [description]="p.description"
     ></app-product-item>
   </div>
 </div>
